==> hazy1k/STM32-Study-Notes/2.参考工程文件/14.SPI-读写串行FLASH（W25Q64）/1.W25Q64/User/flash/bsp_spi_flash.c <==
#include "./flash/bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
  // 1.首先定义SPI和GPIO相关的结构体变量
  SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;
	
	// 2.使能SPI时钟
	FLASH_SPI_APBxClock_FUN(FLASH_SPI_CLK, ENABLE);
	
	// 3.使能SPI引脚相关的时钟
 	FLASH_SPI_CS_APBxClock_FUN(FLASH_SPI_CS_CLK|FLASH_SPI_SCK_CLK|FLASH_SPI_MISO_PIN|FLASH_SPI_MOSI_PIN, ENABLE);
	
  // 4.配置SPI的 CS引脚，普通IO即可
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_CS_PIN; // 引脚PC0
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; // 速度50MHz
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; // 推挽输出
  GPIO_Init(FLASH_SPI_CS_PORT, &GPIO_InitStructure); // 初始化结构体
	
  // 5.配置SPI的 SCK引脚
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_SCK_PIN; // 引脚PA5
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP; // 复用推挽输出
  GPIO_Init(FLASH_SPI_SCK_PORT, &GPIO_InitStructure); // 初始化结构体

  // 6.配置SPI的 MISO引脚
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MISO_PIN; // 引脚PA6
  GPIO_Init(FLASH_SPI_MISO_PORT, &GPIO_InitStructure); // 初始化结构体

  // 7.配置SPI的 MOSI引脚
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MOSI_PIN; // 引脚PA7
  GPIO_Init(FLASH_SPI_MOSI_PORT, &GPIO_InitStructure); // 初始化结构体

  /* 停止信号 FLASH: CS引脚高电平*/
  SPI_FLASH_CS_HIGH();

// SPI 模式配置
// FLASH芯片 支持SPI模式0及模式3，据此设置CPOL CPHA
SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex; // 双线全双工
SPI_InitStructure.SPI_Mode = SPI_Mode_Master;                      // 主机模式
SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;                  // 8位数据模式
SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;                        // 时钟极性高
SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;                       // 数据采样在第二个时钟边沿
SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;                          // 软件NSS管理
SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4; // 时钟预分频器
SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;                 // MSB位先传
SPI_InitStructure.SPI_CRCPolynomial = 7;                           // CRC校验位
SPI_Init(FLASH_SPIx , &SPI_InitStructure); // 初始化SPI
SPI_Cmd(FLASH_SPIx , ENABLE); // 使能SPI
}

u8 SPI_FLASH_SendByte(u8 byte)
{
	 SPITimeout = SPIT_FLAG_TIMEOUT; // 等待超时时间初始化

  // 等待发送缓冲区为空，TXE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx, SPI_I2S_FLAG_TXE) == RESET)
	{
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(0);
   }
  // 写入数据寄存器，把要写入的数据写入发送缓冲区
  SPI_I2S_SendData(FLASH_SPIx, byte);
	SPITimeout = SPIT_FLAG_TIMEOUT;
  // 等待接收缓冲区非空，RXNE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx, SPI_I2S_FLAG_RXNE) == RESET)
  {
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(1);
  }
  // 读取数据寄存器，获取接收缓冲区数据
  return SPI_I2S_ReceiveData(FLASH_SPIx);
}

u16 SPI_FLASH_SendHalfWord(u16 HalfWord)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
  // 等待发送缓冲区为空，TXE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_TXE) == RESET)
	{
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(2);
  }
  // 写入数据寄存器，把要写入的数据写入发送缓冲区
  SPI_I2S_SendData(FLASH_SPIx , HalfWord);
	SPITimeout = SPIT_FLAG_TIMEOUT;
  // 等待接收缓冲区非空，RXNE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_RXNE) == RESET)
	 {
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(3);
   }
  // 读取数据寄存器，获取接收缓冲区数据 
  return SPI_I2S_ReceiveData(FLASH_SPIx);
}
